# hydrax

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml
benchmark/: benchmark_controllers.py
examples/: cart_pole.py  cart_pole_trajectory_optimization.py  crane.py  cube.py  cube_async.py  double_cart_pole.py  double_pendulum.py  humanoid.py  humanoid_mocap.py  humanoid_mocap_headless.py  humanoid_standup.py  leap_hand.py  particle.py  pendulum.py  pusht.py  pusht_headless.py  quadruped.py  quadruped_standup.py  view_g1_mocap_data.py  walker.py
experiments/: evaluate_data.py  evaluate_run.py  generate_experiments.py  plot_data.py  run_experiment.sh
experiments/humanoid/: evaluate_run.py  generate_experiments.py  generate_humanoid_exp.py
experiments/pusht/: cost_smoothing_2.py  cost_smoothing_mini.py  evaluate_pusht_exp.py  evaluate_pusht_run.py  generate_experiments.py  generate_pusht_experiments.py  plots_bargraph.py  plots_costs.py  plots_heatmap.py
experiments/run/: run_experiments_02.sh
experiments/setup/: generate_experiments.py
experiments/variables/: generate_experiments.py
hydra/: base.py  mpc.py  utils.py
hydra/algs/: predictive_sampling.py
hydra/models/particle/: particle.xml
hydra/models/pendulum/: pendulum.xml  scene.xml
hydra/models/walker/: scene.xml  walker.xml
hydra/tasks/: particle.py  pendulum.py  walker.py
hydrax/: __init__.py  alg_base.py  base.py  mpc.py  open_loop.py  risk.py  task_base.py
hydrax/algs/: __init__.py  cem.py  cma_es.py  dial.py  evosax.py  mppi.py  predictive_sampling.py
hydrax/benchmark/: README.md  benchmark.py  controllers.py  plotting.py  run_benchmark.py  runner.py  tasks.py
hydrax/models/cart_pole/: cart_pole.xml  scene.xml
hydrax/models/crane/: crane.xml
hydrax/models/cube/: leap_rh.xml  reorientation_cube.xml  scene.xml
hydrax/models/double_cart_pole/: double_cart_pole.xml  scene.xml
hydrax/models/double_pendulum/: double_pendulum.xml  scene.xml
hydrax/models/g1/: MUJOCO_LOG.TXT  README.md  g1.xml  g1_23dof.xml  g1_23dof_hires.xml  g1_mjlab.xml  g1_mjlab_23dof.xml  scene.xml  scene_23dof.xml  scene_hires.xml
hydrax/models/leap/: leap_rh.xml  leap_rh_old.xml
hydrax/models/particle/: scene.xml
hydrax/models/pendulum/: pendulum.xml  scene.xml
hydrax/models/pusht/: MUJOCO_LOG.TXT  pusht.xml
hydrax/models/unitree_go2/: mjx_go2_force.xml  mjx_go2_position.xml  mjx_go2_position_collision.xml  mjx_scene_position.xml
hydrax/models/walker/: scene.xml  walker.xml
hydrax/simulation/: asynchronous.py  deterministic.py
hydrax/tasks/: __init__.py  cart_pole.py  crane.py  cube.py  double_cart_pole.py  double_pendulum.py  humanoid.py  humanoid_mocap.py  humanoid_standup.py  leap_hand.py  particle.py  pendulum.py  pusht.py  quadruped.py  quadruped_standup.py  time_varying_pendulum.py  walker.py
hydrax/utils/: spline.py  video.py
tests/: test_alg_base.py  test_async.py  test_base.py  test_cart_pole.py  test_cem.py  test_cma_es.py  test_crane.py  test_cube.py  test_dial.py  test_double_cart_pole.py  test_double_pendulum.py  test_dr.py  test_g1.py  test_headless_sim.py  test_leap.py  test_mppi.py  test_multidevice.py  test_opt_iterations.py  test_particle.py  test_pendulum.py  test_predictive_sampling.py  test_pusht.py  test_risk_strategies.py  test_spline.py  test_traj_opt.py  test_utils.py  test_walker.py
